--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,21 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1 #ฟอนต์จากกูเกิล
+  font_awesome_flutter: ^10.8.0 #ไอคอนแปลกๆ
+  introduction_screen: ^3.1.14
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  icons_launcher: ^3.0.0 #ใช้สร้างiconของแอพ
+
+icons_launcher:
+  image_path: "assets/Icon/icon.png"
+  platforms:
+    android:
+      enable: true
+    ios:
+      enable: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -73,6 +76,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family: Kanit
+      fonts:
+        - asset: assets/fonts/Kanit-Bold.ttf
+        - asset: assets/fonts/Kanit-Italic.ttf
+        - asset: assets/fonts/Kanit-Regular.ttf
+          style: italic
   # fonts:
   #   - family: Schyler
   #     fonts:
